# rust-web-development

./: .gitignore
ch_01/minimal-warp/: Cargo.toml
ch_01/minimal-warp/src/: main.rs
ch_01/minimal_reqwest/: Cargo.toml
ch_01/minimal_reqwest/src/: main.rs
ch_02/ch02/src/: main.rs
ch_03/ch03/: Cargo.toml
ch_03/ch03/src/: main.rs
ch_04/ch04/: Cargo.toml
ch_04/ch04/src/: error.rs  main.rs  store.rs
ch_04/ch04/src/routes/: question.rs
ch_04/ch04/src/types/: pagination.rs
ch_06/ch06/: Cargo.toml  log4rs.yaml
ch_06/ch06/handle-errors/src/: lib.rs
ch_06/ch06/src/: main.rs
ch_06/ch06/src/routes/: answer.rs  question.rs
ch_06/ch06/src/types/: answer.rs  question.rs
